--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ license = "Apache-2.0"
 
 [dependencies]
 clap = { version = "4.0", features = ["derive"] }
-# lzjd = "0.2"
+lzjd = { git = "https://github.com/rjzak/lzjd-rs.git", branch = "remove_fasthash" }
 ssdeep = "0.2"
 termcolor = "1.1"
 walkdir = "2.3"
