chore: dependabot, update `clap`, lzjd moved to mdb
Signed-off-by: Richard Zak <richard.j.zak@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 license = "Apache-2.0"
 
 [dependencies]
-clap = { version = "4.0", features = ["derive"] }
-lzjd = { git = "https://github.com/rjzak/lzjd-rs.git", branch = "remove_fasthash" }
+clap = { version = "4.2", features = ["derive"] }
+lzjd = { git = "https://github.com/malwaredb/lzjd-rs.git", branch = "remove_fasthash" }
 ssdeep = "0.2"
 termcolor = "1.1"
 walkdir = "2.3"
