--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ license = "Apache-2.0"
 
 [dependencies]
 clap = { version = "4.3", features = ["derive"] }
-lzjd = { git = "https://github.com/malwaredb/lzjd-rs.git", branch = "remove_fasthash" }
+malwaredb-lzjd = "0.1.0"
 ssdeep = "0.2"
 termcolor = "1.1"
 walkdir = "2.3"
